# UniProton

./: CLAUDE.md  build.py  config.xml
cmake/common/build_auxiliary_script/: make_lib_rename_file_type.sh
cmake/tool_chain/: d9_secure-cortex_r5-config.cmake.in  d9_secure_cortex_r5.cmake  sd3403_armv8.cmake  sd3403_armv8_config.cmake.in  uniproton_tool_chain.cmake  uniproton_tool_chain_gcc.cmake
demos/d9_secure/: CMakeLists.txt  readme.txt
demos/d9_secure/apps/: CMakeLists.txt  main.c
demos/d9_secure/config/: prt_config.c  prt_config.h  prt_config_internal.h
demos/d9_secure/src/: CMakeLists.txt  hwi_init.c  print.c  print.h  start.S  timer.c
demos/d9_secure/src/d9_secure/: cpu_config.h
demos/hi3095/: CMakeLists.txt
demos/hi3095/apps/openamp/: main.c
demos/hi3095/bsp/: mmu.c
demos/hi3095/bsp/hi3095/: cpu_config.h
demos/hi3095/bsp/uart/: serial.h
demos/hi3095/config/: prt_config.h
demos/hi3095/drivers/samples/: hi309x_memmap.h
demos/kp920_lite/: CMakeLists.txt
demos/kp920_lite/apps/openamp/: main.c
demos/kp920_lite/bsp/: hwi_init.c  mmu.c  start.S
demos/kp920_lite/bsp/kp920_lite/: cpu_config.h
demos/kp920_lite/config/: prt_config.c  prt_config.h
demos/sd3403/: CMakeLists.txt
demos/sd3403/bsp/: CMakeLists.txt  print.c
demos/sd3403/bsp/sd3403/: cpu_config.h
demos/sd3403/config/: prt_config.h
doc/component_guide/: UniProton_multicore.md  UniProton_smp.md
doc/en/: _toc.yaml  overview.md  uniproton_apis.md  uniproton_functions.md
doc/om_guide/: gdbstub.md  vscode.md
doc/pzz/: learning.md
docs/: README.md
docs/arch/: README.md
docs/architecture/: overview.md
docs/ipc/: README.md
docs/kernel/: README.md  task.md
docs/mem/: README.md
docs/om/: README.md
src/: CMakeLists.txt
src/arch/: CMakeLists.txt
src/arch/cpu/: CMakeLists.txt  Kconfig
src/arch/cpu/armv7-r/: Kconfig
src/arch/cpu/armv7-r/common/: CMakeLists.txt  armv7_r.h  os_asm_armv7_r_external.h  os_attr_armv7_r_external.h  os_cpu_armv7_r_external.h  prt_div64.c  prt_port.c
src/arch/drv/: CMakeLists.txt
src/arch/drv/gic/: Kconfig  prt_gic_init.c
src/arch/drv/gic/gicv600/: prt_gic_internal.h
src/arch/include/: prt_asm_arm_external.h  prt_attr_external.h  prt_cpu_external.h  prt_gic_external.h
src/component/coredump/: CMakeLists.txt  coredump_core.c  coredump_internal.h  coredump_memory_regions.c
src/component/coredump/backend/: coredump_backend_print.c
src/component/coredump/scripts/: coredump.sh  readme.rst
src/component/coredump/scripts/coredump_parser/: log_parser.py
src/component/coredump/scripts/gdbstubs/: __init__.py
src/component/gdbstub/: gdbstub_common.c
src/component/gdbstub/include/: arch_interface.h  gdbstub_common.h
src/component/mica/: rpmsg_service.c
src/core/kernel/: CMakeLists.txt
src/include/uapi/: prt_atomic.h  prt_buildef_common.h  prt_coredump.h  prt_exc.h  prt_task.h
src/utility/log/: prt_log_internal.h
testsuites/cxx-test/smp/: smp_test.cc
testsuites/cxx-test/tools/: CMakeLists.txt
testsuites/posixtestsuite/conformance/: CMakeLists.txt
testsuites/rhealstone/: CMakeLists.txt
(+27 files in other folders)
